@@ -1,6 +1,7 @@
 Revision history for MooseX-Types
 
 {{$NEXT}}
+        - Add support for qw( :all ) on MooseX::Types::Combine libraries. (kentnl)
 
 0.29    2011-08-20
         - Require namespace::clean 0.19. Tests fail with 0.18. Reported by
